--- a/templates/singleGoal.html
+++ b/templates/singleGoal.html
@@ -1,24 +1,11 @@
-
-	<div class="col-xs-12">
-
-
-	 	<h4>{{ singleGoal.goal }}</h4>
-	 	<p>Subject: {{ singleGoal.goal_subject }}</p>
-	 	<p>For year: {{ singleGoal.goal_year }}</p>
-	 	<h5>Content connected to this goal:</h5>
-
-
-		{% for row in singleGoal.items %}
-
-							<li>
-						
-							{{row.title|e}} - {{row.estimate|e}} h
-							<!--här ska en knapp inkludas som gör goal till done-->
-							
-					</li>
-		{% endfor %}
-		<div class="form-group">
-			<!--här ska en knapp för delete Goal ligga-->
-		</div>
-		<hr>
-	</div>
+<div class="col-xs-12">
+ 	<h4>{{ singleGoal.goal }}</h4>
+ 	<p>Subject: {{ singleGoal.goal_subject }}</p>
+ 	<p>For year: {{ singleGoal.goal_year }}</p>
+ 		<h5>Content connected to this goal:</h5>
+			{% for row in singleGoal.items %}
+				<li>{{row.connection_id|e}} {{row.title|e}} - {{row.estimate|e}} h {% include 'deleteConnBtn.html' %}</li>
+			{% endfor %}
+	{% include 'deleteGoalBtn.html' %}
+	<hr>
+</div>
