--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,5 @@
+<div class="row">
+	<div class="col-xs-12">
 		<p class="grayText italics centered">Disclaimer text för den här sajten</p>
 	</div>
 </div>
