--- a/templates/connectContentForm.html
+++ b/templates/connectContentForm.html
@@ -10,7 +10,7 @@
 			{% endif %}
 			</select>
 			<input type="hidden" name="connectedContentID" value="{{row.id}}">
-			<button class="transparentbtn" type="submit" name="connect"><span class="glyphicon glyphicon-check" aria-hidden="true"></span> Connect content</button>
+			<button class="transparentbtn" type="submit" name="connect"><span class="glyphicon glyphicon-check" aria-hidden="true"></span> Connect</button>
 		</div>
 	</form>
 </div>
