--- a/templates/content.html
+++ b/templates/content.html
@@ -22,11 +22,11 @@
 			</div>
 		{% endif %}
 	<div class="row">
-		<div class="col-xs-3">
+		<div class="col-xs-12 col-sm-4">
 		{% include 'expandContentBtn.html' %}
 		{% include 'contentBtns.html' %}
 		</div>
-		<div class="col-xs-9">
+		<div class="col-xs-12 col-sm-8">
 			<div class="caption">
 				<h4>{{row.title|e}}</h4>
 				<p class="grayText"><i>Published {{row.timestamp|e}} Author: {{row.username}}</i></p>
