--- a/templates/singleContent.html
+++ b/templates/singleContent.html
@@ -6,12 +6,12 @@
 				<img src="http://192.168.33.10/Fantastic-Teaching/uploads/{{ row.file|e }}" alt="article image">
 				{% endif %}
 			<div class="row">
-				<div class="col-xs-2">
+				<div class="col-xs-12 col-sm-4">
 				{% include 'viewAllContentBtn.html' %}
 				{% include 'connectContentForm.html' %}
 				{% include 'contentBtns.html' %}
 				</div>
-				<div class="col-xs-10">
+				<div class="col-xs-12 col-sm-8">
 					<div class="caption">
 						<h4>{{row.title|e}}</h4>
 						<p class="grayText"><i>Published {{row.timestamp|e}} Author: {{row.username}}</i></p>
