Design fix content

--- a/templates/content.html
+++ b/templates/content.html
@@ -1,6 +1,6 @@
-<div class="row">
-{% for row in content %}							
-<div class="col-sm-6 col-md-4">
+{% for row in content %}
+<div class="row">							
+<div class="col-xs-12">
 	<div class="thumbnail">
 		{% if row.file %}
 		<img src="http://192.168.33.10/Fantastic-Teaching/uploads/{{ row.file|e }}" alt="article image">
@@ -44,5 +44,6 @@
 	</div>
 	</div>
 </div>
-{% endfor %}
 </div>
+{% endfor %}
+
