--- a/templates/header.html
+++ b/templates/header.html
@@ -11,8 +11,8 @@
     background-size: cover;
   }
   .container{
-    background-color: white;
-    opacity: 0.85;
+    /* background-color: white;
+    opacity: 0.85;*/
     border-radius: 10px;
   }
   .grayText{
@@ -65,6 +65,42 @@
   .ratingWidth{
     width: 40px;
   }
+
+
+  .content-background{
+    background-color: white;
+    opacity: 0.95;
+  }
+ .content-margin{
+    margin-left: -15px;
+    margin-right: -15px;
+  }
+  .search-margin{
+    margin-left: -15px;
+    margin-right: 15px;
+  }
+  .margin-header-top{
+    margin-top: 10px;
+  }
+  .menu-text{
+    color: white;
+  }
+  .menu-border{
+    border: 1px solid white;
+    padding-left: 30px;
+    padding-right: 30px;
+    font-size: 17px;
+  }
+  .header-border-top-radius{
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+  }
+  .search-border-bottom-radius{
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+  }
+
+
 </style>
 </head>
 <body>
