update DB and article uses
update db

--- a/templates/viewArticleUses.html
+++ b/templates/viewArticleUses.html
@@ -1,6 +1,6 @@
 <div class="row" id="ArticleUses">
 	<div class="col-xs-12">
-	<h4>Hur många använder mitt matrial</h4>
+	<h4>Article uses:</h4>
 		<ul class="list-group">
 			{% for row in viewArticleUses  %}
 				{% if row.user ==  userID %}
