changed login method and class

--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 	<div class="col-sm-6">
 		<h3>Login:</h3>
 		<div class="form-group">
-			<form method="post" action="/Fantastic-Teaching/?/Account/login">
+			<form method="post" action="/Fantastic-Teaching/?/Page/start">
 				<label for="username">Username</label>
 				<input required type="text" name="username" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
 				<label for="Password">Password</label>
@@ -14,7 +14,7 @@
 	<div class="col-sm-6">
 	<h3>New User?</h3>
 		<div class="form-group">
-			<form method="post" action="/Fantastic-Teaching/?/Account/create">
+			<form method="post" action="/Fantastic-Teaching/?/Page/create">
 			<label for="newUsername">New Username</label>
 				<input required type="text" name="newUsername" class="form-control" placeholder="New Username" aria-describedby="basic-addon1">
 				<label for="newPassword">New Password</label>
