--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-xs-12">
-		<p class="grayText italics centered">Disclaimer text för den här sajten</p>
+		<p class="whiteText italics centered">Disclaimer text för den här sajten</p>
 	</div>
 </div>
 </body>
