--- a/templates/goals.html
+++ b/templates/goals.html
@@ -1,5 +1,8 @@
 {% set goalID = rowGoals.id %}
-
+<div class="row content-background">
+<div class="col-xs-12">
+	<h3>All Goals:</h3>
+</div>
 {% for rowGoals in goals %} 
 <div class="col-xs-12 col-sm-6 col-md-4">
 	<div class="thumbnail">
@@ -17,4 +20,4 @@
 </div>
 {% endfor %}
 
-
+</div>
