--- a/templates/goalsForm.html
+++ b/templates/goalsForm.html
@@ -1,3 +1,4 @@
+<div class="row content-background border-bottom-radius">
 <div class="col-xs-12">
 <h3>Teaching Goals:</h3>
 <form method='post' action="?/GoalsController/add">
@@ -27,4 +28,5 @@
 		<button class="transparentbtn" type="submit" name="goalUserID" value="{{userID}}"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> Add goal</button>
 	</div>
 </form>
+</div>
 </div>
