--- a/templates/changeUser.html
+++ b/templates/changeUser.html
@@ -1,5 +1,6 @@
-<div class="col-sm-12">
-	<h4>Edit user settings</h4>
+<div class="row content-background border-bottom-radius">
+<div class="col-xs-12">
+	<h3>Edit user settings</h3>
 	<div class="form-group">
 		<form method="post" action="/Fantastic-Teaching/?/Account/change">
 			<label for="updatedPassword">New Password:</label>
@@ -7,4 +8,5 @@
 			<button class="transparentbtn" name="userForUpdate" value="{{userID}}" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Change Password</button>
 		</form>
 	</div>
+</div>
 </div>
