--- a/templates/header.html
+++ b/templates/header.html
@@ -5,111 +5,18 @@
 <title>Fantastic Teaching</title>
 <!-- Latest compiled and minified CSS BOOTSTRAP -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-<style type="text/css">
-  body{
-    background: url(https://images.unsplash.com/photo-1432821596592-e2c18b78144f?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=3f9c78df0edb464244bbabb04d1797d8) no-repeat center center fixed;
-    background-size: cover;
-  }
-  .container{
-    /* background-color: white;
-    opacity: 0.85;*/
-    border-radius: 10px;
-  }
-  .grayText{
-    color: silver;
-  }
-  .italics{
-    font-style: italic;
-  }
-  .centered{
-    text-align: center;
-  }
-  .h1link{
-    color: black;
-    text-decoration: none;
-  }
-  .h1link:hover, .h1link:focus, .h1link:active{
-    color: black;
-    text-decoration: none;
-  }
-  .user-header{
-    background-color: lightblue;
-  }
-  .row{
-    padding-top: 10px;
-    padding-bottom: 20px;
-  }
-  .invisibleinput, .transparentbtn{
-    border:none;
-    background-color: transparent;
-    background-image: none;
-    text-shadow: none;
-    box-shadow: none;
-  }
-  .transparentbtn:hover{
-    background-color: transparent;
-    color: silver;
-  }
-  .transparentbtn:focus{
-    background-color: transparent;
-    background-image: none;
-  }
-  .transparentbtn:active{
-    background-color: transparent;
-    background-image: none;
-  }
-  .ratingButton{
-    border: none;
-    background-color: transparent;
-  }
-  .ratingWidth{
-    width: 40px;
-  }
+<!-- main style -->
+<link href='styles/style.css' rel='stylesheet' type='text/css'>
 
-
-  .content-background{
-    background-color: white;
-    opacity: 0.95;
-  }
- .content-margin{
-    margin-left: -15px;
-    margin-right: -15px;
-  }
-  .search-margin{
-    margin-left: -15px;
-    margin-right: 15px;
-  }
-  .margin-header-top{
-    margin-top: 10px;
-  }
-  .menu-text{
-    color: white;
-  }
-  .menu-border{
-    border: 1px solid white;
-    padding-left: 30px;
-    padding-right: 30px;
-    font-size: 17px;
-  }
-  .header-border-top-radius{
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-  }
-  .search-border-bottom-radius{
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-  }
-
-
-</style>
+<link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <div class="container">
   <div id="wrapper">
-    <div class="row">
+    <div class="row content-background border-top-radius margin-header-top">
       <div class="col-lg-12">
         <a class="h1link" href="/Fantastic-Teaching/?/user/home">
-        <h1>Fantastic Teaching</h1>
+        <div class="header-text">Fantastic Teaching</div>
         </a>
       </div>
     </div>
