--- a/templates/publishNew.html
+++ b/templates/publishNew.html
@@ -1,3 +1,4 @@
+<div class="row content-background border-bottom-radius margin-footer-bottom">
 <div class="col-xs-12">
 	<h3>Publish new content</h3>
 	<form method='post' action="/Fantastic-Teaching/?/Content/add" enctype="multipart/form-data">
@@ -54,7 +55,9 @@
 			<input class="btn btn-default" type='submit' name='postContent' value='Post'>
 		</div>
 	</form>
-<div class="row">
+</div>
+</div>
+</div>
 
 <!-- Script -->
 <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
