--- a/templates/searchForm.html
+++ b/templates/searchForm.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row content-background border-bottom-radius margin-footer-bottom">
 	<div class="col-xs-12">
 		<form method="post" action="?/Content/search">
 			<div class="form-group">
