--- a/templates/viewArticleUses.html
+++ b/templates/viewArticleUses.html
@@ -1,4 +1,4 @@
-<div class="row" id="ArticleUses">
+<div class="row content-background border-bottom-radius" id="ArticleUses">
 	<div class="col-xs-12">
 	<h4>Article uses:</h4>
 		<ul class="list-group">
