--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,4 +1,6 @@
 <div class="row">
-	<h3>Welcome {{user}}!</h3>
-	<p>You have a {{userLevel}} account.</p>
+	<div class="col-xs-12">
+		<h3>Welcome {{user}}!</h3>
+		<p>You have a {{userLevel}} account.</p>
+	</div>
 </div>
