--- a/templates/searchResult.OLD.html
+++ b/templates/searchResult.OLD.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!-- <div class="row">
 	<div class="col-sm-6 col-md-4">
 	{% for row in searchResult %}
 		<div class="thumbnail">
@@ -71,3 +71,4 @@
 		{% endfor %}
 	</div>
 </div>
+ -->
