--- a/templates/publishNew.html
+++ b/templates/publishNew.html
@@ -17,6 +17,7 @@
 		<div class="form-group">
 			<label for="text">Text:</label>
 			<textarea class="form-control" id="my_textarea" name="text" placeholder='Write your text...'></textarea>
+			<!--
 			<input type="button" value="b" />
 			<input type="button" value="i" />
 			<input type="button" value="u" />
@@ -24,6 +25,7 @@
 			<br>
 			<div id="preview"></div>
 			<br>
+			-->
 		</div>
 		<div class="form-group">
 			<input type="hidden" name="publishNew" value=NULL>
@@ -43,7 +45,8 @@
 </div>
 </div>
 
-<!-- Script -->
+<!-- Script for Formatter 
 <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
 <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script src="scripts/formatter.js"></script>
+-->
