--- a/templates/singleContent.html
+++ b/templates/singleContent.html
@@ -8,7 +8,9 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-3">
 				{% include 'viewAllContentBtn.html' %}
+				{% if userLevel == "Premium" %}
 				{% include 'connectContentForm.html' %}
+				{% endif %}
 				{% include 'contentBtns.html' %}
 				</div>
 				<div class="col-xs-12 col-sm-9">
