added links to content in viewArticleUses
changed select in SQL query and added link in template

--- a/templates/viewArticleUses.html
+++ b/templates/viewArticleUses.html
@@ -6,8 +6,8 @@
 				{% if row.user ==  userID %}
 					<li class="list-group-item">
 					<span class="badge">{{row.uses|e}}</span>
-					{{row.title|e}}
-					</li>
+					<a href="/Fantastic-Teaching/?/Content/view/{{row.id}}">{{row.title|e}}
+					</a></li>
 					{% endif %}
 			{% endfor %}
 		</ul>
