new controller and model php
connected content php moved

--- a/templates/connectContentForm.html
+++ b/templates/connectContentForm.html
@@ -1,5 +1,5 @@
 <div class="form-group">
-	<form method="post" action="/Fantastic-Teaching/?/GoalsController/createConnection">
+	<form method="post" action="/Fantastic-Teaching/?/Using/createConnection">
 		<div class="form-group">
 			<label for="connectedGoalID">Connect to goal:</label>
 			<select class="form-control" name='connectedGoalID'>
