--- a/templates/deleteGoalBtn.html
+++ b/templates/deleteGoalBtn.html
@@ -1,7 +1,7 @@
 <p>
 	<div class="form-group">
 		<form method="post" action="/Fantastic-Teaching/?/GoalsController/delete">
-			<button class="transparentbtn" type="submit" name="deleteGoalID" value="{{rowGoals.id}}"><span class="glyphicon glyphicon-minus" aria-hidden="true"></span> Delete</button>
+			<button class="transparentbtn menu-buttons" type="submit" name="deleteGoalID" value="{{rowGoals.id}}"><span class="glyphicon glyphicon-minus" aria-hidden="true"></span> Delete</button>
 		</form>
 	</div>
 </p>
