--- a/templates/expandGoalBtn.html
+++ b/templates/expandGoalBtn.html
@@ -1,3 +1,3 @@
 <p>
-	<a class="transparentbtn" href="/fantastic-teaching/?/GoalsController/singleGoal/{{rowGoals.id}}"><span class="glyphicon glyphicon-expand" aria-hidden="true"></span> Expand</a>
+	<a class="transparentbtn menu-buttons" href="/fantastic-teaching/?/GoalsController/singleGoal/{{rowGoals.id}}"><span class="glyphicon glyphicon-expand" aria-hidden="true"></span> Expand</a>
 </p>
