--- a/templates/viewAllContentBtn.html
+++ b/templates/viewAllContentBtn.html
@@ -1,5 +1,5 @@
 <div class="form-group">
 	<a href="?/User/home">
-	<button class="transparentbtn" value="{{row.id}}"><span class="glyphicon glyphicon-list" aria-hidden="true"></span> View all</button>
+	<button class="transparentbtn menu-buttons" value="{{row.id}}"><span class="glyphicon glyphicon-list" aria-hidden="true"></span> View all</button>
 	</a>
 </div>
