--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row content-background">
 	<div class="col-xs-12">
 		<h3>Welcome {{user}}!</h3>
 		<p>You have a {{userLevel}} account.</p>
