--- a/templates/deleteConnBtn.html
+++ b/templates/deleteConnBtn.html
@@ -1,3 +1,3 @@
 <form class="form-inline" method="post" action="/Fantastic-Teaching/?/Using/deleteConnection">
-	<button class="transparentbtn" type="submit" name="deleteConnectionID" value="{{row.connection_id}}"><span class="glyphicon glyphicon-check" aria-hidden="true"></span> Done</button>
+	<button class="transparentbtn menu-buttons" type="submit" name="deleteConnectionID" value="{{row.connection_id}}"><span class="glyphicon glyphicon-check" aria-hidden="true"></span> Done</button>
 </form>
