--- a/templates/viewAllGoalsBtn.html
+++ b/templates/viewAllGoalsBtn.html
@@ -1,3 +1,3 @@
 	<div class="col-xs-12">
-		<a class="transparentbtn" href="/fantastic-teaching/?/User/profile"><span class="glyphicon glyphicon-list" aria-hidden="true"></span> View all</a>
+		<a class="transparentbtn menu-buttons" href="/fantastic-teaching/?/User/profile"><span class="glyphicon glyphicon-list" aria-hidden="true"></span> View all</a>
 	</div>
