Profile menu button fix

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -23,8 +23,8 @@
 	</div>
 
 <!-- USER PROFILE -->
-	<div class="col-xs-12 col-sm-2 form-group">
-		<a class="menu-buttons" href="/fantastic-teaching/?/User/profile"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Profile</a>
+	<div class="col-xs-12 col-sm-2 form-group account-button">
+		<a class="menu-buttons account-button-mobil" href="/fantastic-teaching/?/User/profile"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Profile</a>
 	</div>
 
 <!-- LOG OUT -->
