--- a/styles/style.css
+++ b/styles/style.css
@@ -96,3 +96,10 @@ body{
     color: gray;
     text-decoration: none;
   }
+  .account-button{
+    height: 25px;
+    padding-top: 2px;
+  }
+  .account-button-mobil{
+    margin-left: 5px;
+  }
