--- a/templates/publishNew.html
+++ b/templates/publishNew.html
@@ -17,7 +17,7 @@
 		<div class="form-group">
 			<label for="text">Text:</label>
 			<textarea class="form-control" id="my_textarea" name="text" placeholder='Write your text...'></textarea>
-			<!--
+			<!--The formatter is a work in progress!
 			<input type="button" value="b" />
 			<input type="button" value="i" />
 			<input type="button" value="u" />
